--- a/iTech-JPR.yml
+++ b/iTech-JPR.yml
@@ -1,3 +1,5 @@
+# This is my .yml script that created the three servers inthe AWS environment.
+
 # iTech Media Test 1
 
 - name: Load Balanced Apache Servers
